# ergo

./: .gitignore  Cargo.toml  ChangeLog.md  INSTALL.md  README.md  TODO.md  bootstrap.sh  workspace.ergo
bob/: .gitignore  Cargo.toml  README.md  script_demo
bob/src/: main.rs  output.rs
bob/src/output/: interface.rs  mod.rs
bob/src/script/: mod.rs  runtime.rs
bob/src/script/ast/: mod.rs  parse.rs  tokenize.rs
bob/src/script/runtime/: do.rs  exec.rs  has.rs  load.rs  map.rs  path.rs  track.rs
bob/user_guide/: book.toml  notes.md
bob/user_guide/src/: introduction.md
bob/user_guide/src/details/: intro.md
bob/user_guide/src/tutorial/: advanced.md  basics.md  concurrency.md  intro.md  tracking.md  user_convenience.md
ergo/: Cargo.toml  ChangeLog.md  README.md
ergo/contrib/highlight.js/: ergo.js
ergo/contrib/vim/ftdetect/: ergo.vim
ergo/contrib/vim/ftplugin/: ergo.vim
ergo/contrib/vim/syntax/: ergo.vim
ergo/quick_reference/: dir.ergo  ergo_quick_ref.tex
ergo/src/: main.rs  options.rs  script.rs  sync.rs
ergo/src/output/: interface.rs  mod.rs  plain.rs  terminal.rs
ergo/src/script/: base.rs  mod.rs  runtime.rs
ergo/src/script/ast/: mod.rs  parse.rs  tokenize.rs
ergo/src/terminal_state/: generic.rs  unix.rs
ergo/tests/: module_loading.rs
ergo/tests/module_loading/: workspace.ergo
ergo/tests/module_loading/directory_dir/: dir.ergo
ergo/tests/module_loading/directory_ext.ergo/: workspace.ergo
ergo/tests/module_loading/prelude_load/: workspace.ergo
ergo/tests/module_loading/workspace_access/: workspace.ergo
ergo/tests/module_loading/workspace_fallback/: mod  workspace.ergo
ergo/tests/module_loading/workspace_load/: workspace.ergo
ergo/tests/module_loading/workspace_parent/: workspace.ergo
ergo/tests/module_loading/workspace_with_dir/: dir.ergo  workspace.ergo
ergo/user_guide/: book.toml  ergo.js  notes.md  quick_reference.html  style.css
ergo/user_guide/src/: SUMMARY.md  introduction.md  quick_ref.md  std.md
ergo/user_guide/src/details/: syntax.md
ergo/user_guide/src/rfc/: intro.md  lazy-fn.md  no-arg-fn.md  script-design.md  script-eval.md
ergo/user_guide/src/tutorial/: advanced.md  basics.md  concurrency.md  intro.md  tracking.md  user_convenience.md
ergo_abi_stable/: Cargo.toml  README.md
ergo_abi_stable/src/: bst.rs  closure.rs  ffi.rs  log.rs  type_erase.rs  u128.rs  uuid.rs
ergo_abi_stable/src/future/: mod.rs  stream.rs
ergo_abi_stable/src/stream/: shared_async_stream.rs  shared_iter.rs
ergo_runtime/: Cargo.toml
ergo_runtime/src/: context_ext.rs  dependency.rs  error.rs  gc.rs  hash.rs  io.rs  lib.rs  metadata.rs  source.rs  traits.rs  types.rs  value.rs
ergo_runtime/src/context/: backtrace.rs  diagnostic_sources.rs  dynamic_scope.rs  env.rs  error_scope.rs  evaluating.rs  gc.rs  hooks.rs  log.rs  mod.rs  owned_paths.rs  progress.rs  shared_state.rs  store.rs  task.rs  traits.rs
ergo_runtime/src/context/task/: runtime.rs
ergo_runtime/src/error/: mod.rs  pattern_error.rs
ergo_runtime/src/traits/: bind.rs  call.rs  display.rs  functor.rs  into.rs  mod.rs  nested.rs  stored.rs  type_name.rs  value_by_content.rs
ergo_runtime/src/type_system/: mod.rs  trait.rs  type.rs
ergo_runtime/src/types/: args.rs  array.rs  bind_rest.rs  bool.rs  byte_stream.rs  error.rs  index.rs  iter.rs  map.rs  map_entry.rs  mod.rs  number.rs  path.rs  shared_iter.rs  shared_stream.rs  stream.rs  string.rs  type.rs  unbound.rs  unit.rs  unset.rs
ergo_script/: Cargo.toml
ergo_script/src/: base.rs  eval.rs  lib.rs  runtime.rs  testing.rs
ergo_script/src/ast/: keyset.rs  mod.rs  parse.rs  parse_tree.rs  tokenize.rs  tokenize_tree.rs
ergo_script/src/base/: doc.rs  load.rs  mod.rs
ergo_std/: Cargo.toml  ChangeLog.md  test.ergo
ergo_std/script/: builtin.ergo  cache.ergo  dir.ergo  doc.ergo  net.ergo  path.ergo  test.ergo  type.ergo  workspace.ergo
ergo_std/src/: array.rs  bool.rs  cmp.rs  collection.rs  env.rs  error.rs  exec.rs  fs.rs  function.rs  getopt.rs  if.rs  io.rs  iter.rs  json.rs  lib.rs  log.rs  map.rs  map_entry.rs  match.rs  net.rs  number.rs  order.rs  path.rs  script.rs  seq.rs  sqlite.rs  string.rs  sync.rs  task.rs  trait.rs  type.rs  unit.rs  unset.rs  value.rs
ergo_std/src/cache/: memory.rs  mod.rs  sqlite.rs
ergo_std/src/cache/schema/: delete_entry.sql  delete_unused_diagnostic_sources.sql  delete_unused_paths.sql  delete_unused_values.sql  init.sql  read_diagnostic_sources.sql  read_entry.sql  read_unused_paths.sql  read_used_paths.sql  read_value.sql  (+5 more)
ergolang/: Cargo.toml  ChangeLog.md  README.md
ergolang/src/: app_err.rs  main.rs  options.rs
ergolang/src/command/: format.rs  mod.rs
ergolang/src/terminal_state/: mod.rs  unix.rs
ergolang/tests/: module_loading.rs
ergolang/tests/module_loading/: basic_ext.ergo
ergolang/user_guide/: book.toml  quick_reference.html
ergolang/user_guide/src/: SUMMARY.md  std.md
ergolang/user_guide/theme/: highlight.css
grease/: Cargo.toml  README.md
grease/src/: bst.rs  closure.rs  error.rs  ffi.rs  fnv.rs  future.rs  hash.rs  lib.rs  path.rs  plan.rs  prelude.rs  procedure.rs  traits.rs  type_erase.rs  types.rs  u128.rs  uuid.rs  value.rs
grease/src/future/: eager.rs  mod.rs
grease/src/runtime/: command.rs  io.rs  log.rs  mod.rs  procedure.rs  store.rs  task_manager.rs  traits.rs
grease/src/traits/: display.rs  into.rs  trait.rs  trait_impl.rs  types.rs
grease/src/value/: dependency.rs  display.rs  error.rs  into.rs  mod.rs  types.rs
grease/tests/: runtime.rs
so/: Cargo.toml  README.md
so/src/: main.rs  options.rs
so/src/output/: interface.rs  mod.rs  plain.rs  terminal.rs
so/src/script/: base.rs  mod.rs  runtime.rs
so/tests/: module_loading.rs
so/tests/module_loading/: basic_no_ext
so/user_guide/: book.toml
so/user_guide/src/: SUMMARY.md  introduction.md
so_std/: Cargo.toml
so_std/src/: collection.rs  debug.rs  exec.rs  fs.rs  has.rs  if.rs  lib.rs  path.rs  seq.rs  string.rs  task.rs  value.rs  variable.rs
tack/: Cargo.toml  README.md
tack/examples/: basic_plugin.rs
tack/src/: lib.rs  registry.rs
(+185 files in other folders)
