[workspace]
members = ["abi_stable_ext", "ergolang", "ergo_runtime", "ergo_runtime_macro", "ergo_script", "ergo_std"]

[profile.release]
lto = true
panic = 'abort'
strip = true

# The `perf` profile is like `release` but includes debug symbols/info.
[profile.perf]
inherits = "release"
strip = false
debug = 1

# The `optimize` profile is like `dev` but enables optimizations.
[profile.optimize]
inherits = "dev"
opt-level = 3
