[workspace]
members = ["ergolang", "ergo_abi_stable", "ergo_runtime", "ergo_runtime_macro", "ergo_script", "ergo_std"]

[workspace.package]
version = "1.0.0-rc.5"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2021"
rust-version = "1.64"

[workspace.dependencies]
# abi_stable 0.10.5 fixes some build warnings, but constrains the `once_cell`
# package, which causes an older version of clap to be chosen which then
# produces a bunch of deprecation warnings.
abi_stable = "=0.10.4"
futures = "0.3"
log = "0.4"
pin-project = "1"
plugin_tls = "0.4.1"

[profile.release]
lto = true
panic = 'abort'
strip = true

# The `perf` profile is like `release` but includes debug symbols/info.
[profile.perf]
inherits = "release"
strip = false
debug = 1

# The `optimize` profile is like `dev` but enables optimizations.
[profile.optimize]
inherits = "dev"
opt-level = 3
