[package]
name = "ergo"
version = "1.0.0-beta.4"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

[dependencies]
abi_stable = "0.8"
atty = "^0.2"
chrono = "^0.4"
ctrlc = "^3.1"
directories = "^2.0"
ergo_runtime = { path = "../ergo_runtime" }
futures = "^0.3"
grease = { path = "../grease" }
libloading = "^0.6"
log = "^0.4"
pom = { git = "https://github.com/afranchuk/pom", rev = "d0a979fdee0fc83d32531b5fa5085a98fc26e16d" }
simplelog = "^0.7"
slab = "^0.4"
structopt = "^0.3"
term = "^0.6"
uuid = "^0.7"
