[package]
name = "ergo"
version = "1.0.0-rc.0"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2021"

[dependencies]
atty = "^0.2"
chrono = "^0.4"
ctrlc = "^3.1"
directories = "^2.0"
ergo_script = { path = "../ergo_script" }
ergo_runtime = { path = "../ergo_runtime" }
futures = "^0.3"
log = "^0.4"
pager = "0.16"
simplelog = "^0.7"
slab = "^0.4"
structopt = "^0.3"
term = "^0.6"
uuid = "^0.7"
termimad = "0.17"

[target.'cfg(unix)'.dependencies]
termios = "0.3"
