[package]
name = "ergo_abi_stable"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
abi_stable.workspace = true
bytes = "0.5"
futures.workspace = true
log.workspace = true
pin-project.workspace = true
uuid = { version = "0.8", features = ["serde", "v5"] }
