[package]
name = "ergo_runtime"
version = "1.0.0-rc.4"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2021"

[dependencies]
abi_stable = "0.9" # needed only for StableAbi derive macros to work (they reference ::abi_stable)
abi_stable_ext = { path = "../abi_stable_ext" }
bincode = "^1.2"
cachemap = { git = "https://github.com/afranchuk/cachemap.git", branch = "main", features = ["abi_stable"] }
codespan-reporting = "0.11"
ergo_runtime_macro = { path = "../ergo_runtime_macro" }
futures = "^0.3"
log = "^0.4"
num_cpus = "^1"
num = { version = "0.4", features = ["serde"] }
parking_lot = "0.11"
pin-project = "1"
plugin_tls = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["parking_lot","rt-multi-thread","sync"] }
uuid = { version = "0.8", features = ["v5"] }
work-queue = "0.1"

[dev-dependencies]
plugin_tls = { version = "0.3", features = ["host"] }
