[package]
name = "ergo_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
abi_stable.workspace = true # needed only for StableAbi derive macros to work (they reference ::abi_stable)
abi_stable_ext = { path = "../abi_stable_ext" }
bincode = "1.2"
cachemap = { git = "https://github.com/afranchuk/cachemap.git", branch = "main", features = ["abi_stable"] }
codespan-reporting = "0.11"
ergo_runtime_macro = { path = "../ergo_runtime_macro" }
futures.workspace = true
log.workspace = true
num_cpus = "1"
num = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
pin-project.workspace = true
plugin_tls.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["parking_lot","sync"] }
uuid = { version = "0.8", features = ["v5"] }
work-queue = "0.1"

[dev-dependencies]
plugin_tls = { workspace = true, features = ["host"] }
