[package]
name = "ergo_script"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cachemap = { git = "https://github.com/afranchuk/cachemap.git", branch = "main" }
ergo_runtime = { path = "../ergo_runtime" }
futures.workspace = true
horrorshow = "0.8"
libloading = "^0.6"
log.workspace = true
pin-project.workspace = true
plugin_tls = { workspace = true, features = ["host"] }
pulldown-cmark = "0.8"
