[package]
name = "ergo_std"
version = "1.0.0-beta.8"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.9"
bincode = "^1.2"
bzip2 = "0.4"
ergo_runtime = { path = "../ergo_runtime" }
directories = "3.0"
flate2 = "1.0"
futures = "0.3"
glob = "^0.3"
grease = { path = "../grease" }
lazy_static = "^1"
lzma-sys = { version = "0.1", features = ["static"] }
plugin_tls = { version = "~0.2.1", features = ["plugin"] }
rand = "^0.7"
reqwest = { version = "0.10", default-features = false, features = ["blocking","rustls-tls"] }
serde = { version = "^1", features = ["derive"] }
sha = "1.0"
tar = "0.4"
tokio = "0.3"
tokio-util = { version = "0.5", features = ["io"] }
xz = "0.1"
zip = "0.5"

[dev-dependencies]
ergo_script = { path = "../ergo_script" }

[target.'cfg(unix)'.dependencies]
errno = "0.2"
libc = "0.2"

[lib]
crate-type = ["cdylib"]
