[package]
name = "ergo_std"
version = "1.0.0-rc.4"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10"
atty = "^0.2"
bincode = "^1.2"
bzip2 = "0.4"
ergo_runtime = { path = "../ergo_runtime" }
directories = "4.0"
flate2 = "1.0"
futures = "0.3"
glob = "^0.3"
json = "0.12"
lazy_static = "^1"
lzma-sys = { version = "0.1", features = ["static"] }
parking_lot = "0.12"
percent-encoding = "2.1"
plugin_tls = { version = "0.3", features = ["plugin"] }
rand = "^0.7"
reqwest = { version = "0.10", default-features = false, features = ["blocking","rustls-tls-native-roots"] }
# rusqlite = { version = "0.27", features = ["bundled"] }
serde = { version = "^1", features = ["derive"] }
sha = "1.0"
sqlite = "0.26"
tar = "~0.4.35"
xz = "0.1"
zip = "0.5"

[dev-dependencies]
ergo_script = { path = "../ergo_script" }
httpmock = "0.5"

[target.'cfg(unix)'.dependencies]
errno = "0.2"
libc = "0.2"

[lib]
crate-type = ["cdylib"]
