[package]
name = "ergo_std"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
abi_stable.workspace = true
atty = "0.2"
bincode = "1.2"
bzip2 = "0.4"
ergo_runtime = { path = "../ergo_runtime" }
directories = "4.0"
file-guard = "0.1"
flate2 = "1.0"
futures.workspace = true
glob = "0.3"
json = "0.12"
lazy_static = "1"
lzma-sys = { version = "0.1", features = ["static"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
percent-encoding = "2.1"
plugin_tls = { workspace = true, features = ["plugin"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking","rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
sha = "1.0"
sqlite = "0.26"
sqlite3-src = { version = "*", features = ["bundled"] }
tar = "~0.4.35"
xz = "0.1"
zip = "0.5"

[dev-dependencies]
ergo_script = { path = "../ergo_script" }
httpmock = "0.5"

[target.'cfg(unix)'.dependencies]
errno = "0.2"
libc = "0.2"

[lib]
crate-type = ["cdylib"]
