[package]
name = "ergolang"
version = "1.0.0-rc.4"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2021"

[dependencies]
atty = "^0.2"
backtrace = { version = "0.3", optional = true }
chrono = "^0.4"
clap = { version = "3", features = ["derive"] }
ctrlc = "^3.1"
directories = "4.0"
ergo_script = { path = "../ergo_script" }
ergo_runtime = { path = "../ergo_runtime" }
futures = "^0.3"
log = { version = "^0.4", features = ["release_max_level_debug"] }
pager = "0.16"
pretty = { version = "0.11", features = ["termcolor"] }
pulldown-cmark = "0.9"
simplelog = "^0.11"
slab = "^0.4"
supports-color = "1"
term = "*"
terminal_size = "*"

## LSP-specific dependencies
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
ropey = "1.3"
tokio = { version = "1", features = ["parking_lot", "sync"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[dev-dependencies]
serial_test = "0.5"
