[package]
name = "ergolang"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atty = "0.2"
backtrace = { version = "0.3", optional = true } # todo remove
chrono = "^0.4"
clap = { version = "3", features = ["derive"] }
ctrlc = "3.1"
directories = "4.0"
ergo_script = { path = "../ergo_script" }
ergo_runtime = { path = "../ergo_runtime" }
futures.workspace = true
log = { workspace = true, features = ["release_max_level_debug"] }
pretty = { version = "0.11", features = ["termcolor"] }
pulldown-cmark = "0.9"
simplelog = "0.11"
supports-color = "1"
term = "*"
terminal_size = "*"

## LSP-specific dependencies
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
ropey = "1.3"
tokio = { version = "1", features = ["parking_lot", "sync"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3"
pager = "0.16"

[dev-dependencies]
serial_test = "0.5"
