[package]
name = "grease"
version = "0.3.0"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

[dependencies]
abi_stable = "0.8"
futures = { version = "0.3", features = ["thread-pool"] }
grease_macro = { path = "../grease_macro" }
lazy_static = "^1"
log = "^0.4"
num_cpus = "^1"
tokio = { version = "0.2", features = ["rt-threaded","parking_lot"] }
uuid = { version = "0.8", features = ["serde", "v5"] }
