[package]
name = "grease"
version = "0.4.0"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

[dependencies]
abi_stable = "0.8"
bytes = "0.5"
futures = { version = "0.3", features = ["thread-pool"] }
grease_macro = { path = "../grease_macro" }
lazy_static = "^1"
log = "^0.4"
num_cpus = "^1"
tokio = { version = "0.3", features = ["parking_lot","rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v5"] }
