[package]
name = "so"
version = "1.0.0-alpha.1"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

[dependencies]
atty = "^0.2"
bincode = "^1.2"
chrono = "^0.4"
ctrlc = "^3.1"
directories = "^2.0"
exec = { path = "../exec" }
futures = "^0.3"
grease = { path = "../grease" }
log = "^0.4"
pom = { git = "https://github.com/afranchuk/pom", rev = "d56552b2b9b54a833e7afc1543d9dd26c338b2f5" }
rand = "^0.7"
serde = { version = "^1", features = ["derive"] }
simplelog = "^0.7"
structopt = "^0.3"
tack = { path = "../tack" }
term = "^0.6"
uuid = "^0.7"

[profile.release]
lto = true
panic = 'abort'
