[package]
name = "tack"
version = "0.1.0"
authors = ["Alex Franchuk <afranchuk@caci.com>"]
edition = "2018"

[features]
registry = ["libloading", "log"]

[dependencies]
libloading = { version = "^0.5", optional = true }
log = { version = "^0.4", optional = true }

[[example]]
name = "basic_plugin"
crate-type = ["cdylib"]
